refactored PlayerThread volume-related logic for clarity and improved functionality